moved it over to svelte. built the main game loop. added a readme with the todo list.

--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "battleship",
+  "name": "svelte-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public --no-clear",
     "test": "jest",
     "watch": "npm run test -- --watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/timothycohen/battleship.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/timothycohen/battleship/issues"
-  },
-  "homepage": "https://github.com/timothycohen/battleship#readme",
   "devDependencies": {
-    "jest": "^27.4.3"
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "@testing-library/svelte": "^3.0.3",
+    "babel-jest": "^27.4.2",
+    "jest": "^27.4.3",
+    "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "svelte": "^3.0.0",
+    "svelte-jester": "^2.1.5"
+  },
+  "dependencies": {
+    "sirv-cli": "^1.0.0"
   }
 }
